--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,12 @@ header{
 }
 .bloqueUno{
 	width: 100%;
-	height: 100vh;
-	padding-top: 100px;
+	padding: 10% 0;
 	color: #7a7a7a;
 }
 .bloqueDos{
 	width: 100%;
-  height: 100vh;
+ 	padding: 30% 0;
   background-color: #74e0c1;
 }
 #img-logo{
@@ -43,4 +42,10 @@ header{
 	width: 100%;
 	position: fixed;
 	z-index: 9;
+}
+.sub{
+	font-family:'PrestigeEliteStd-Bd', Sans-Serif;
+	font-size: 30px;
+	color: #00918C;
+	margin-top: -10px;
 }
