--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,10 @@ footer{
 	color:#ffffff;
 	color:rgba(0, 0, 0, 0.4);
 }
+
+@media (min-width: 200px) and (max-width: 770px) {
+	#contModal{
+		width: 80%;
+    margin: 20px auto;
+	}
+}
