--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ header{
 	width: 100%;
 	height: 100%;
 	background-color: rgba(44, 61, 79, 0.8);
-
 }
 .bloqueTres{
 	width: 100%;
@@ -103,21 +102,32 @@ footer{
 #contProject{
 	width: 100%;
 }
+.tituloProyecto{
+	font-family: 'PrestigeEliteStd-Bd', Sans-Serif;
+  font-size: 25px;
+  color: #223c4c;
+  margin: 0 0 0 3%;
+}
+.tituloDescripcion{
+	font-family:'PrestigeEliteStd-Bd', Sans-Serif;
+	font-size: 18px;
+	color: #a0a0a0;
+}
 /*-----------------------------------------------*/
 .zonaMenu {
-	width:300px;
+	width:50%;
 	height:100%;
-	background-color: green;
+	background-color: #eee;
 	position: fixed;
-	left:-300px;
+	left:-50%;
 	transition: left 1s;
-	top: 0;
+	top: 52px;
 	z-index: 9;
+	padding-top: 40px;
 }
 .mostrarMenu {
 	left:0;
 }
-
 .skillbar {
 	position:relative;
 	display:block;
@@ -139,7 +149,6 @@ footer{
 	-o-transition-property:width, background-color;
 	transition-property:width, background-color;
 }
-
 .skillbar-title {
 	position:absolute;
 	top:0;
@@ -156,7 +165,6 @@ footer{
 	border-top-left-radius:3px;
 	border-bottom-left-radius:3px;
 }
-
 .skillbar-title span {
 	display:block;
 	background:rgba(0, 0, 0, 0.1);
@@ -170,7 +178,6 @@ footer{
 	border-top-left-radius:3px;
 	border-bottom-left-radius:3px;
 }
-
 .skillbar-bar {
 	height:35px;
 	width:0px;
@@ -179,7 +186,6 @@ footer{
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 }
-
 .skill-bar-percent {
 	position:absolute;
 	right:10px;
