--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ header{
 	padding-top: 20px;
 	background-attachment: fixed;
 }
+.scroll{
+	margin-top: 10%;
+}
+.white{
+	color: #fff;
+}
+.iconMouse{
+	color: #fff;
+	font-size: 20px;
+}
 #menu{
 	display: none;
 }
