--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ header{
 	margin: 0 0 5% 0;
   border-bottom: 1px solid #fff;
 }
+.contTituloGray{
+	margin: 0 0 5% 0;
+  border-bottom: 1px solid gray;
+}
 .skills{
 	padding: 10% 0;
 	background-color: #69b3b9;
@@ -77,7 +81,7 @@ header{
 	position: fixed;
 	z-index: 9;
 }
-.sub, .sub2{
+.sub, .sub2, .sub3{
 	font-family:'PrestigeEliteStd-Bd', Sans-Serif;
 	font-size: 35px;
   margin-top: -21px;
@@ -87,6 +91,9 @@ header{
 }
 .sub2{
 	color: #fff;
+}
+.sub3{
+	color: gray;
 }
 #c-p{
 	border-radius: 5px;
@@ -113,12 +120,13 @@ header{
  background-color: #69b3b9;
 }
 .iconRedes{
-	color: white;
-	font-size: 40px;
+	color: gray;
+	font-size: 30px;
+	margin: 0 5px;
 }
-.iconRedes:hover{
+/*.iconRedes:hover{
 	color: #4ca3a5;
-}
+}*/
 #botones2{
 	color: #69b3b9 ;
   background-color: #fff;
@@ -140,7 +148,7 @@ header{
 /*-----------------------------------------------*/
 footer{
 	width: 100%;
-	padding: 2% 0 1% 0;
+	padding: 3% 0;
 	background-color: #d3d3d3;
 	color: gray;
 }
@@ -264,6 +272,9 @@ footer{
 }
 
 @media (min-width: 200px) and (max-width: 770px) {
+	body{
+		text-align: center;
+	}
 	#contModal{
 		width: 80%;
     margin: 20px auto;
