--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,14 @@ header{
 	margin: 0 0 5% 0;
   border-bottom: 1px solid gray;
 }
+.enlaceCv{
+	color: #fff;
+	text-decoration: none;
+}
+.enlaceCv:hover, .enlaceCv:link, .enlaceCv:active, .enlaceCv:visited{
+	color: #fff;
+	text-decoration: none;
+}
 .skills{
 	padding: 10% 0;
 	background-color: #69b3b9;
@@ -96,6 +104,7 @@ header{
 	color: gray;
 }
 #c-p{
+	position: relative;
 	border-radius: 5px;
 	margin-bottom: 20px;
 }
@@ -104,11 +113,6 @@ header{
 }
 .img-proyecto{
 	margin-bottom: 20px;
-}
-.colorHover{
-	width: 100%;
-	height: 100%;
-	background-color: rgba(44, 61, 79, 0.8);
 }
 .bloqueTres{
 	width: 100%;
@@ -144,6 +148,15 @@ header{
 	color: #fff;
 	font-family: Arial;
 	margin-left: 8px; 
+}
+.efectoHover{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: yellow;
+	margin: 0 10px;
+	top: 0;
+	left:0;
 }
 /*-----------------------------------------------*/
 footer{
